The problem was that static initialisation occurs before entering main() and therefore before the C locale was forced in kcalc.cpp. This in turn generated a problem for constants defined as a string if the user locale defined the decimal separator not as a ".". Thanks to alex for the source of the problem the problem, Hub for the explanation and Maelcum who pointed to the solution, now Pi is initialized only when the class is instantiated the first time, which solves the problem. It just has to be called as a function rather than a constant now. If someone familiar with K_GLOBAL_STATIC_WITH_ARGS could check what i did i would be grateful, i am a bit reluctant to backport it to 4.2 without an OK first.

BUG:190098
CCMAIL:ahartmetz@gmail.com
CCMAIL:lemma@confuego.org

svn path=/trunk/KDE/kdeutils/kcalc/; revision=970340